k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colorpalette-service
  namespace: colorpalette
  labels:
    app: colorpalette
spec:
  type: ClusterIP
  selector:
    app: colorpalette
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
